--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "react-select": "^5.9.0",
     "secretjs": "1.15.1",
     "tailwindcss": "^3.4.17",
-    "vite": "^5.4.19",
+    "vite": "5.4.19",
     "vite-tsconfig-paths": "^4.3.2",
     "yup": "^1.4.0",
     "zustand": "^4.4.6"
@@ -66,7 +66,8 @@
     "esbuild": "0.25.1",
     "ws": "8.18.1",
     "secretjs": "1.15.1",
-    "@babel/runtime": "7.26.10"
+    "@babel/runtime": "7.26.10",
+    "vite": "5.4.19"
   },
   "private": true,
   "lint-staged": {
